--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,7 @@
     <string name="not_hazardous_asteroid_image">Not hazardous asteroid image</string>
     <string name="this_is_nasa_s_picture_of_day_showing_nothing_yet">This is NASA\'s picture of day, showing nothing yet</string>
     <string name="nasa_picture_of_day_content_description_format">NASA\'s picture of day: %s</string>
+    <string name="astronomical_unit_information">Astronomical unit information</string>
+    <string name="content_description_hazardous">Asteroid is potentially hazardous</string>
+    <string name="content_description_not_hazardous">Asteroid is not hazardous to human life</string>
 </resources>
